# sunwell

./: .gitignore  .python-version  ADOPTIONS_SUMMARY.md  AGENT_EXECUTION_WIRED.md  ARCHITECTURE_REFACTOR.md  CHIRP_FEATURE_AUDIT.md  CHIRP_FIX_COMPLETE.md  CHIRP_MCP_INTEGRATION_STATUS.md  CHIRP_MIGRATION_STATUS.md  CHIRP_PATTERNS_LEARNED.md  COMPONENT_MIGRATION.md  FINAL_IMPLEMENTATION.md  FRONTEND_INTEGRATION_SUMMARY.md  IMMEDIATE_ADOPTIONS_COMPLETE.md  LICENSE  MEMORY_ENHANCEMENTS_PROGRESS.md  MIGRATION_COMPLETE.md  MODULARIZATION_ANALYSIS.md  Makefile  PROJECTS_MIGRATION_COMPLETE.md  README.md  REFACTOR_COMPLETE.md  RFC-010-sunwell.md  RFC-011-lenses-with-skills.md  RFC-012-tool-calling.md  RFC-013-hierarchical-memory.md  RFC-014-multi-topology-memory.md  RFC-015-mirror-neurons.md  RFC-016-autonomous-mode.md  RFC-017-team-swarm.md  RFC-018-quality-benchmark.md  RFC-019-naaru-architecture.md  RFC-020-cognitive-router.md  RFC-021-lens-commands.md  RFC-022-tiered-attunement.md  RFC-023-adaptive-identity.md  RFC-024-tools-and-context.md  RFC-025-architectural-refactor.md  RUNNING_THE_UI.md  TECHNICAL-VISION.md  (+4 more)
docs/: ARCHITECTURE-PROPOSAL.md  ARCHITECTURE.md  CLI-API-CONTRACT.md  CLI-SCHEMA-CONTRACT.md  CONCEPT-dag-first-planning.md  CONTEXT-AUDIT.md  EVENT-ANALYSIS.md  EVENT-AUDIT-COMPLETE.md  EVENT-FIXES-APPLIED.md  EVENT-ISSUES-FIXED.md  EVENT-ISSUES-FOUND.md  EVENT-ISSUES-ROUND2.md  EVENT-ISSUES-ROUND3.md  EVENT-ISSUES-ROUND4-FIXED.md  EVENT-ISSUES-ROUND4.md  EVENT-STANDARD.md  EVENT-TYPE-SAFETY-SUMMARY.md  EVENT-TYPE-SAFETY.md  FRONTEND-TESTING-SETUP.md  HARMONIC-PLANNER-UI-GAPS-EVAL.md  HARMONIC-PLANNER-UI-GAPS.md  LEGACY-CODE-REMOVAL-PLAN.md  LENS-TAXONOMY-100.md  METHODOLOGY-s-tier-coverage-analysis.md  PACKAGING-STRATEGY.md  PLAN-130-agent-constellation.md  RFC-034-contract-aware-planning.md  RFC-035-domain-agnostic-projects.md  RFC-036-artifact-first-planning.md  RFC-037-cli-consolidation.md  RFC-038-harmonic-planning.md  RFC-039-expertise-aware-planning.md  RFC-040-plan-persistence.md  RFC-041-surgical-file-editing.md  RFC-042-adaptive-agent.md  RFC-043-sunwell-studio.md  RFC-044-puzzle-planning.md  RFC-045-project-intelligence.md  RFC-046-autonomous-backlog.md  RFC-047-deep-verification.md  (+135 more)
examples/: autonomous_demo.py  brain_demo.py  demo_rfc134_features.py  functiongemma_router.py  llm_benchmark.py  lowb_strategies.py  mirror_demo.py  multi_simulacrum_demo.py  naaru_demo.py  novel_techniques.py  parallel_autonomous_demo.py  realistic_benchmark.py  rfc014_integration.py  test_thought_rotation.py  unified_naaru_demo.py  unified_router_test.py
lenses/: TEMPLATE-v2.lens  api-documenter-v2.lens  api-documenter.lens  api-test-writer-v2.lens  api-test-writer.lens  base-writer-v2.lens  base-writer.lens  changelog-writer-v2.lens  changelog-writer.lens  code-reviewer-v2.lens  code-reviewer.lens  coder-v2.lens  coder.lens  concurrency-reviewer-v2.lens  concurrency-reviewer.lens  coverage-analyst-v2.lens  coverage-analyst.lens  dead-code-hunter-v2.lens  dead-code-hunter.lens  docs-assistant-v2.lens  docs-assistant.lens  docstring-writer-v2.lens  docstring-writer.lens  e2e-test-writer-v2.lens  e2e-test-writer.lens  go-expert-v2.lens  go-expert.lens  helper-v2.lens  helper.lens  mutation-tester-v2.lens  mutation-tester.lens  perf-analyst-v2.lens  perf-analyst.lens  pr-reviewer-v2.lens  pr-reviewer.lens  python-expert-v2.lens  python-expert.lens  readme-crafter-v2.lens  readme-crafter.lens  researcher.lens  (+24 more)
plan/: conversational-dag-architecture.md  identity-reorganization.md  memory-reorganization.md  tools-reorganization.md
schemas/: agent-events.schema.json  error-codes.yaml  error.schema.json  lens-v2.schema.yaml  run-analysis.schema.json  simulacrum.schema.json
scripts/: analyze_ensemble_success.py  benchmark_harmonic_candidates.py  benchmark_memory_quality.py  benchmark_tool_selection.py  check_chirp_contracts.py  check_cursor_db_size.py  check_imports.py  check_layer_imports.py  clean_cursor_backups.py  debug_tool_calling.py  demo_schema_contract.py  dev.sh  diagnose_memory_architecture.py  diagnose_memory_retrieval.py  experiment_tool_shapes.py  find_unwired.py  fix_test_imports.py  generate_cli_docs.py  generate_event_schema.py  generate_event_types.py  magnetic_research_experiment.py  magnetic_search_experiment.py  profile_cli_startup.py  run_ablation_study.py  run_lens_experiments.py  run_vortex_experiments.py  smoke_test_model_capabilities.py  strip_rfc_references.py  test_harmonic_sampling.py  test_hierarchical_memory.py  test_nondeterministic.py  test_rotation_vs_harmonic.py  test_temperature_strategies.py  vacuum_cursor_db.py  validate_observability.py  validate_skill_permissions.py  verify_collective_hard.py  verify_collective_harder.py  verify_fish_school.py  verify_fish_school_v2.py  (+20 more)
skills/: core-skills.yaml  docs-creation-skills.yaml  docs-transformation-skills.yaml  docs-utility-skills.yaml  docs-validation-skills.yaml  meta-skills.yaml  permission-presets.yaml  tool-skills.yaml
src/: ball.py  echo.py  paddle_player1.py  paddle_player2.py  renderer.py  scoreboard.py
studio/: .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: agent.rs  briefing.rs  commands.rs  coordinator.rs  dag.rs  demo.rs  error.rs  eval.rs  heuristic_detect.rs  indexing.rs  interface.rs  lens.rs  main.rs  memory.rs  naaru.rs  preview.rs  project.rs  run_analysis.rs  security.rs  self_knowledge.rs  surface.rs  util.rs  weakness.rs  weakness_types.rs  workflow.rs  workspace.rs  writer.rs
tests/: __init__.py  conftest.py  test_activity_decay.py  test_adaptive.py  test_agent_mode.py  test_all_exports.py  test_artifact_planner.py  test_backlog.py  test_binding.py  test_briefing.py  test_capability_registry.py  test_cascade_executor.py  test_cli_json_output.py  test_compound_eye.py  test_core.py  test_dead_code.py  test_delegation.py  (+66 more)
(+2718 files in other folders)
