[project]
name = "sunwell"
version = "0.1.0"
description = "RAG for Judgment - Dynamic expertise retrieval for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "llane" }]
keywords = ["llm", "rag", "expertise", "ai", "prompt-engineering", "free-threading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Sunwell is optimized for free-threaded Python (3.14t)
# For best performance, use: /usr/local/bin/python3.14t -m sunwell

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
ollama = ["ollama>=0.1"]
embeddings = ["sentence-transformers>=2.2"]
api = ["fastapi>=0.109", "uvicorn>=0.27"]
all = ["sunwell[openai,anthropic,ollama,embeddings,api]"]
benchmark = [
    "tiktoken>=0.5.0",      # Accurate token counting
    "scipy>=1.10.0",        # Statistical tests (Mann-Whitney, Wilcoxon)
    "ruff>=0.2.0",          # Deterministic linting checks
    "mypy>=1.8.0",          # Deterministic type checks
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
sunwell = "sunwell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunwell"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Prefer free-threaded Python for true parallelism
# Install with: uv venv --python python3.14t
python-preference = "managed"

# Environment variables for optimal performance
[tool.uv.env]
# Disable GIL warning if you know what you're doing
# SUNWELL_NO_GIL_WARNING = "1"
