[project]
name = "sunwell"
version = "0.1.0"
description = "RAG for Judgment - Dynamic expertise retrieval for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "llane" }]
keywords = [
    "llm",
    "rag",
    "expertise",
    "ai",
    "prompt-engineering",
    "free-threading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Sunwell is optimized for free-threaded Python (3.14t)
# For best performance, use: /usr/local/bin/python3.14t -m sunwell

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
    # RFC-113: HTTP server for Studio UI
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "websockets>=16.0",
    # Ollama is default provider, uses OpenAI client for /v1 endpoint
    "openai>=1.0",
    "rosettes>=0.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
embeddings = ["sentence-transformers>=2.2"]
external = [
    "httpx>=0.27.0",       # Async HTTP client for API calls
    "apscheduler>=3.10.0", # Cron scheduling
]
mcp = ["mcp>=1.1.0"]  # Model Context Protocol for Cursor/Claude integration
all = ["sunwell[anthropic,embeddings,external,mcp]"]
benchmark = [
    "tiktoken>=0.5.0", # Accurate token counting
    "scipy>=1.10.0",   # Statistical tests (Mann-Whitney, Wilcoxon)
    "ruff>=0.2.0",     # Deterministic linting checks
    "mypy>=1.8.0",     # Deterministic type checks
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "vulture>=2.14",  # Dead code detection
]

[project.scripts]
sunwell = "sunwell.interface.cli:cli_entrypoint"
sunwell-mcp = "sunwell.mcp:main"  # MCP server entry point

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunwell"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include notification assets (icons)
[tool.hatch.build.targets.wheel.force-include]
"src/sunwell/interface/cli/notifications/assets" = "sunwell/interface/cli/notifications/assets"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "external: marks tests that require external services",
]

[tool.coverage.run]
source = ["src/sunwell"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.uv]
# Prefer free-threaded Python for true parallelism
# Install with: uv venv --python python3.14t
python-preference = "managed"

# Note: Environment variables like SUNWELL_NO_GIL_WARNING=1 should be set
# in your shell profile, not in pyproject.toml (uv doesn't support [tool.uv.env])
