[package]
name = "sunwell-studio"
version = "0.1.0"
description = "AI-native creative environment"
authors = ["Sunwell Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
dirs = "5"  # Platform-appropriate home/config directories
chrono = { version = "0.4", features = ["serde"] }  # DateTime formatting
regex = "1"  # Version name parsing

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
